--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="
     card bg-[#264653] card-side  w-full 
     sm:px-5 flex-col  sm:items-center sm:justify-evenly 
-    md:h-[80vh] md:px-40 md:flex-row">
+    md:h-[80vh] md:px-40 md:flex-row rounded-none">
         <div class="
         card-body text-primary-content 
         sm:width-[90vw] sm:p-0 gap-5 
